fix video links, update projects spacing, fetchit description

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -8,7 +8,7 @@
     grid-gap: 20px;
 }
 .project-thumbnail {
-  margin: auto auto;
+  margin: auto 8px;
 }
 
 /* ==========================================================================
